cluster-b/manifests/networking_k8s_io-ingress-stable-ingress.yaml
# Source: deploy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stable-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "team-eddie-staging.akpdemoapps.link"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rollouts-svc-stable
            port:
              number: 80
